[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evo2"
version = "0.1.0"
description = "Genome modeling across all domains of life"
readme = "README.md"
authors = [
    { name = "Team Evo 2" }
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "biopython",
    "huggingface_hub",
    "vtx",
    "numpy",
    "torch",
    "tqdm",
    "pyyaml"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/arcinstitute/evo2"
Documentation = "https://github.com/arcinstitute/evo2#readme"
Source = "https://github.com/arcinstitute/evo2"

[tool.setuptools.packages.find]
include = ["evo2*"]

[tool.setuptools.package-data]
evo2 = ["configs/*.yml"] 